--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <input id="itemQty" placeholder="পরিমাণ" type="number" min="0" />
   <select id="itemUnit">
     <option value="kg">kg</option>
-    <option value="g">gram</option>
+    <option value="g">gram</option>    
+    <option value="pics">pics</option>
   </select>
   <input id="itemPrice" placeholder="দাম (৳)" type="number" />
   <input id="itemDate" type="date" />
