--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <select id="itemUnit">
     <option value="kg">kg</option>
     <option value="g">gram</option>
+    <option value="pics">pics</option>
   </select>
   <input id="itemPrice" placeholder="দাম (৳)" type="number" />
   <input id="itemDate" type="date" />
